--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@ title: Главная страница
 ---
 
 <main class="main">
+
     <section class="container section steps">
         <div class="section__title">
             <h3 class="section__title_main">Активация</h3>
@@ -12,16 +13,22 @@ title: Главная страница
         <div class="steps__block">
             <div class="steps__card">
                 <div class="steps__card_title">
-                    <div class="steps__card_title_num">1</div>
+                    <div class="steps__card_title_block">
+                        <img class="steps__card_title_img" src="assets/images/icons/steps-num.svg" alt="">
+                        <span class="steps__card_title_num">1</span>
+                    </div>
                     <div class="steps__card_title_text">Выбираем VPN</div>
                 </div>
                 <div class="steps__card_content">
-                    <div class="steps__card_content_text">Все ключи должны быть активированы на сайт Microsoft <span>с использованием VPN</span></div>
+                    <div class="steps__card_content_text">Все ключи должны быть активированы на сайт Microsoft <span class="steps__card_content_unique">с использованием VPN</span></div>
                 </div>
             </div>
             <div class="steps__card">
                 <div class="steps__card_title">
-                    <div class="steps__card_title_num">2</div>
+                    <div class="steps__card_title_block">
+                        <img class="steps__card_title_img" src="assets/images/icons/steps-num.svg" alt="">
+                        <span class="steps__card_title_num">2</span>
+                    </div>
                     <div class="steps__card_title_text">Активируем</div>
                 </div>
                 <div class="steps__card_content">
@@ -30,7 +37,10 @@ title: Главная страница
             </div>
             <div class="steps__card">
                 <div class="steps__card_title">
-                    <div class="steps__card_title_num">3</div>
+                    <div class="steps__card_title_block">
+                        <img class="steps__card_title_img" src="assets/images/icons/steps-num.svg" alt="">
+                        <span class="steps__card_title_num">3</span>
+                    </div>
                     <div class="steps__card_title_text">Играем</div>
                 </div>
                 <div class="steps__card_content">
@@ -50,12 +60,13 @@ title: Главная страница
         <div class="activate__block">
 
             <div class="activate-card">
-                <div class="activate-card__img">
-                    <img src="assets/images/activate-1.png" alt="">
-                </div>
+                <img class="activate-card__img" src="assets/images/activate-1.png" alt="">
                 <div class="activate-card__title">Выбор VPN</div>
                 <div class="activate-card__list">
-                    <div class="activate-card__list_item">Выберите впн со списка ниже - либо воспользуйтесь своим.</div>
+                    <div class="activate-card__list_item">
+                        <img class="activate-card__list_img" src="assets/images/icons/list-icon.svg" alt="">
+                        <span>Выберите впн со списка ниже - либо воспользуйтесь своим.</span>
+                    </div>
                     <div class="activate-card__list_item">Используя впн важно выбирать регион, такой же как и регион в ключа!</div>
                 </div>
                 <div class="activate-card__text"></div>
@@ -63,9 +74,7 @@ title: Главная страница
             </div>
 
             <div class="activate-card">
-                <div class="activate-card__img">
-                    <img src="assets/images/activate-2.png" alt="">
-                </div>
+                <img class="activate-card__img" src="assets/images/activate-2.png" alt="">
                 <div class="activate-card__title">Активация игры</div>
                 <div class="activate-card__list">
                     <div class="activate-card__list_item">включаем VPN с нужным регионом</div>
@@ -77,9 +86,7 @@ title: Главная страница
             </div>
 
             <div class="activate-card">
-                <div class="activate-card__img">
-                    <img src="assets/images/activate-3.png" alt="">
-                </div>
+                <img class="activate-card__img" src="assets/images/activate-3.png" alt="">
                 <div class="activate-card__title">Подарок за отзыв</div>
                 <div class="activate-card__text">Оставляя положительный отзыв - вы получаете подарочную карту, которой можете воспользоваться в будущем :)</div>
                 <div class="activate-card__list">
@@ -123,4 +130,5 @@ title: Главная страница
 
         <div class="vpns__block"></div>
     </section>
+
 </main>
