--- a/src/index.html
+++ b/src/index.html
@@ -556,10 +556,18 @@ title: Главная страница
                 </div>
             </div>
             <div class="pre-order__contact">
-                <div class="pre-order__links">
-
+                <div class="pre-order__card">
+                    <div class="pre-order__card_title">По всем вопросам</div>
+                    <div class="pre-order__card_text">Если вы не смогли решить какую-либо трудность то напишите нашему саппорту для решения этих вопросов в следующие месенджеры</div>
                 </div>
-                <div class="pre-order__email"></div>
+                <div class="pre-order__card">
+                    <div class="pre-order__card_title">Подпишись и получи скидку</div>
+                    <div class="pre-order__card_text">Подпишись на нашу интересную рассылку и получай дополнительные скидки на весь ассортимент</div>
+                    <form class="pre-order__subs" method="post">
+                        <input class="pre-order__subs_input" type="email" placeholder="Введите свой email..." name="" id="">
+                        <button class="pre-order__subs_btn btn">Подписаться</button>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
