--- a/src/index.html
+++ b/src/index.html
@@ -177,12 +177,11 @@ title: Главная страница
 
                 </div>
 
-
-
                 <div class="section__title">
                     <h3 class="section__title_main">VPN для вас</h3>
                     <span class="section__title_sub">Новые VPN добавляем по рекомендациям</span>
                 </div>
+
             </div>
         </div>
 
@@ -624,7 +623,7 @@ title: Главная страница
                         </div>
 
                     </div>
-                    <div class="pre-order__card">
+                    <div class="pre-order__card pre-order__card_2">
                         <div class="pre-order__card_title">Подпишись и получи скидку</div>
                         <div class="pre-order__card_text">Подпишись на нашу интересную рассылку и получай дополнительные скидки на весь ассортимент</div>
                         <form class="pre-order__subs" method="post">
