--- a/src/index.html
+++ b/src/index.html
@@ -566,7 +566,7 @@ title: ВПН
 
     </section>
 
-    <section class="section pre-order">
+    <section class="section pre-order _vpn">
         <div class="container">
             <div class="pre-order__block">
                 <div class="pre-order__time">
