--- a/src/catalog.html
+++ b/src/catalog.html
@@ -97,12 +97,30 @@ title: Главная страница
                         <div class="catalog-slider__sold_swiper">
                             <div class="swiper">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide">Slide 1</div>
-                                    <div class="swiper-slide">Slide 2</div>
-                                    <div class="swiper-slide">Slide 3</div>
-                                    <div class="swiper-slide">Slide 4</div>
-                                    <div class="swiper-slide">Slide 5</div>
-                                    <div class="swiper-slide">Slide 6</div>
+                                    <div class="swiper-slide">
+                                        <a class="catalog-slider__sold_link" href="#">
+                                            <img class="catalog-slider__sold_img" src="assets/images/catalog/slide-1.png" alt="">
+                                        </a>
+                                        <a class="catalog-slider__sold_link" href="#">
+                                            <img class="catalog-slider__sold_img" src="assets/images/catalog/slide-1.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a class="catalog-slider__sold_link" href="#">
+                                            <img class="catalog-slider__sold_img" src="assets/images/catalog/slide-1.png" alt="">
+                                        </a>
+                                        <a class="catalog-slider__sold_link" href="#">
+                                            <img class="catalog-slider__sold_img" src="assets/images/catalog/slide-1.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a class="catalog-slider__sold_link" href="#">
+                                            <img class="catalog-slider__sold_img" src="assets/images/catalog/slide-1.png" alt="">
+                                        </a>
+                                        <a class="catalog-slider__sold_link" href="#">
+                                            <img class="catalog-slider__sold_img" src="assets/images/catalog/slide-1.png" alt="">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
