--- a/src/catalog.html
+++ b/src/catalog.html
@@ -124,21 +124,74 @@ title: Главная страница
                                 </div>
                             </div>
                         </div>
-                        <div class="catalog-slider__sold_actions">
-                            <div class="swiper-arrow__block catalog-slider__best_arrows">
-                                <div class="swiper-button-prev">
-                                    <img src="assets/images/home/icons/arrow-bg.svg" class="swiper-arrow__left-bg" alt="">
-                                    <img src="assets/images/home/icons/arrow-right.svg" class="swiper-arrow__left" alt="">
-                                </div>
-                                <div class="swiper-pagination"></div>
-                                <div class="swiper-button-next">
-                                    <img src="assets/images/home/icons/arrow-bg.svg" class="swiper-arrow__right-bg" alt="">
-                                    <img src="assets/images/home/icons/arrow-right.svg" class="swiper-arrow__right" alt="">
-                                </div>
+
+                        <div class="swiper-arrow__block catalog-slider__sold_actions">
+                            <div class="swiper-button-prev">
+                                <img src="assets/images/home/icons/arrow-right.svg" class="swiper-arrow__left" alt="">
+                            </div>
+                            <div class="swiper-pagination"></div>
+                            <div class="swiper-button-next">
+                                <img src="assets/images/home/icons/arrow-right.svg" class="swiper-arrow__right" alt="">
                             </div>
                         </div>
+
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="catalog-list">
+        <div class="container">
+            <div class="catalog__tabs">
+                <a class="catalog__tab" href="#">
+                    <span class="catalog__tab_block">
+                        <img class="catalog__tab_img" src="assets/images/home/icons/catalog.svg" alt="">
+                        <span class="catalog__tab_title">Catalog</span>
+                    </span>
+                </a>
+                <a class="catalog__tab" href="#">
+                    <span class="catalog__tab_block">
+                        <img class="catalog__tab_img" src="assets/images/home/icons/pc.svg" alt="">
+                        <span class="catalog__tab_title">PC</span>
+                    </span>
+                </a>
+                <a class="catalog__tab" href="#">
+                    <span class="catalog__tab_block">
+                        <img class="catalog__tab_img" src="assets/images/home/icons/playstation.svg" alt="">
+                        <span class="catalog__tab_title">PlayStation</span>
+                    </span>
+                </a>
+                <a class="catalog__tab active" href="#">
+                    <span class="catalog__tab_block">
+                        <img class="catalog__tab_img" src="assets/images/home/icons/xbox.svg" alt="">
+                        <span class="catalog__tab_title">Xbox</span>
+                    </span>
+                </a>
+                <a class="catalog__tab" href="#">
+                    <span class="catalog__tab_block">
+                        <img class="catalog__tab_img" src="assets/images/home/icons/nintendo.svg" alt="">
+                        <span class="catalog__tab_title">Nintendo</span>
+                    </span>
+                </a>
+                <a class="catalog__tab" href="#">
+                    <span class="catalog__tab_block">
+                        <img class="catalog__tab_img" src="assets/images/home/icons/giftcard.svg" alt="">
+                        <span class="catalog__tab_title">Gift Cards</span>
+                    </span>
+                </a>
+                <a class="catalog__tab" href="#">
+                    <span class="catalog__tab_block">
+                        <img class="catalog__tab_img" src="assets/images/home/icons/subs.svg" alt="">
+                        <span class="catalog__tab_title">Subscriptions</span>
+                    </span>
+                </a>
+                <a class="catalog__tab" href="#">
+                    <span class="catalog__tab_block">
+                        <img class="catalog__tab_img" src="assets/images/home/icons/gamepoints.svg" alt="">
+                        <span class="catalog__tab_title">Game Points</span>
+                    </span>
+                </a>
             </div>
         </div>
     </section>
