--- a/src/cart.html
+++ b/src/cart.html
@@ -133,14 +133,91 @@ title: Главная страница
                         <div class="cart-item__desc_tabs">
                             <div class="cart-item__desc_title">Системные требования</div>
                             <div class="cart-item__desc_tabs_btns">
-                                <button class="cart-item__desc_tabs_btn _active">Минимальныесистемные требования</button>
-                                <button class="cart-item__desc_tabs_btn">Рекомендуемые системные требования</button>
+                                <button content-id="minimum" class="cart-item__desc_tabs_btn tab-btn _active">Минимальныесистемные требования</button>
+                                <button content-id="normal" class="cart-item__desc_tabs_btn tab-btn">Рекомендуемые системные требования</button>
                             </div>
                             <div class="cart-item__desc_tabs_content">
-                                <div class="cart-item__desc_tabs_item">table</div>
-                                <div class="cart-item__desc_tabs_item">table</div>
+                                <div class="cart-item__desc_tabs_item tab-content _active" id="minimum">
+                                    <div class="cart-table">
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">ОС</div>
+                                            <div class="cart-table__cell">Windows 10 (64-разрядная версия)</div>
+                                        </div>
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">Процессор</div>
+                                            <div class="cart-table__cell">Intel Core i7-4790K или AMD Ryzen 5 1500X</div>
+                                        </div>
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">Оперативная память</div>
+                                            <div class="cart-table__cell">8 ГБ ОЗУ</div>
+                                        </div>
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">Видеокарта</div>
+                                            <div class="cart-table__cell">NVIDIA GeForce GTX 1050Ti или AMD Radeon RX4</div>
+                                        </div>
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">Место на диске</div>
+                                            <div class="cart-table__cell">100 ГБ</div>
+                                        </div>
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">Дополнительно</div>
+                                            <div class="cart-table__cell">Требуются 64-разрядные процессор и операционная система</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="cart-item__desc_tabs_item tab-content" id="normal">
+                                    <div class="cart-table">
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">ОС</div>
+                                            <div class="cart-table__cell">Windows 10 (64-разрядная версия)</div>
+                                        </div>
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">Процессор</div>
+                                            <div class="cart-table__cell">Intel Core i7-4790K или AMD Ryzen 5 1500X</div>
+                                        </div>
+                                        <div class="cart-table__row">
+                                            <div class="cart-table__cell">Оперативная память</div>
+                                            <div class="cart-table__cell">8 ГБ ОЗУ</div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cart-advantages">
+        <div class="container">
+            <div class="cart-advantages__block">
+                <div class="cart-advantages__item">
+                    <img src="assets/images/cart/advantage-1.svg" class="cart-advantages__icon">
+                    <div class="cart-advantages__content">
+                        <div class="cart-advantages__title">Низкие цены</div>
+                        <div class="cart-advantages__text">Дешовые и надежные продукты</div>
+                    </div>
+                </div>
+                <div class="cart-advantages__item">
+                    <img src="assets/images/cart/advantage-2.svg" class="cart-advantages__icon">
+                    <div class="cart-advantages__content">
+                        <div class="cart-advantages__title">Быстрая поддержка</div>
+                        <div class="cart-advantages__text">Моментальные компетентная поддержка 24/7</div>
+                    </div>
+                </div>
+                <div class="cart-advantages__item">
+                    <img src="assets/images/cart/advantage-3.svg" class="cart-advantages__icon">
+                    <div class="cart-advantages__content">
+                        <div class="cart-advantages__title">Мгновенная доставка</div>
+                        <div class="cart-advantages__text">Быстрая активация за 15 секунд</div>
+                    </div>
+                </div>
+                <div class="cart-advantages__item">
+                    <img src="assets/images/cart/advantage-4.svg" class="cart-advantages__icon">
+                    <div class="cart-advantages__content">
+                        <div class="cart-advantages__title">Гибкие платежи</div>
+                        <div class="cart-advantages__text">Большинство методов оплаты на разный вкус</div>
                     </div>
                 </div>
             </div>
