--- a/src/cart.html
+++ b/src/cart.html
@@ -516,20 +516,97 @@ title: Главная страница
     <section class="cart-faq">
         <div class="container">
             <div class="cart-faq__block">
-                <div class="cart-faq__header">
-                    <div class="cart-faq__tabs">
-                        <button content-id="faq" class="cart-tab-btn tab-btn-third">FAQ</button>
+                <div class="cart-heading">
+                    <div class="cart-heading__tabs">
+                        <button content-id="heading" class="cart-tab-btn tab-btn-third">FAQ</button>
                         <button content-id="help-to-activate" class="cart-tab-btn tab-btn-third _active">Помощь по активации ключа</button>
                     </div>
-                    <div class="cart-faq__help">
-                        <div class="cart-faq__help_title">Остались вопросы?</div>
-                        <button class="cart-faq__help_btn btn">Поддержка</button>
+                    <div class="cart-heading__help">
+                        <div class="cart-heading__help_title">Остались вопросы?</div>
+                        <button class="btn-bordered">Поддержка</button>
                     </div>
                 </div>
-                <div class="cart-faq__accordion accordion">
-                    <div class="accordion__head"></div>
+                <div class="cart-faq__accordion">
+                    <div class="accordion">
+                        <div class="accordion__intro">
+                            <span class="accordion__intro_title">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, asperiores.
+                            </span>
+                            <img class="accordion__intro_icon" src="assets/images/icons/accordion-down-2.svg" alt="">
+                            <img class="accordion__intro_icon_active" src="assets/images/icons/accordion-top-2.svg" alt="">
+                        </div>
+                        <div class="accordion__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur atque iure voluptatum cupiditate deleniti, optio odit sequi iusto, maiores neque consequatur fugiat minima suscipit culpa? Quis beatae amet laudantium, quaerat iusto animi sequi consequuntur ad, nam totam laborum repellendus rem obcaecati nulla. Ipsa quis, ducimus quia optio quasi doloremque id maxime repellat, consectetur vitae assumenda architecto facere eaque enim aliquid ea, iusto placeat eligendi possimus? Rerum optio distinctio cum reiciendis quae, in dicta perferendis ratione consectetur laborum non laboriosam explicabo ex porro veritatis debitis neque, eligendi, perspiciatis esse quaerat dolores tempore quidem voluptate id. Tenetur amet asperiores quidem similique.
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__intro">
+                            <span class="accordion__intro_title">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, asperiores.
+                            </span>
+                            <img class="accordion__intro_icon" src="assets/images/icons/accordion-down-2.svg" alt="">
+                            <img class="accordion__intro_icon_active" src="assets/images/icons/accordion-top-2.svg" alt="">
+                        </div>
+                        <div class="accordion__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur atque iure voluptatum cupiditate deleniti, optio odit sequi iusto, maiores neque consequatur fugiat minima suscipit culpa? Quis beatae amet laudantium, quaerat iusto animi sequi consequuntur ad, nam totam laborum repellendus rem obcaecati nulla. Ipsa quis, ducimus quia optio quasi doloremque id maxime repellat, consectetur vitae assumenda architecto facere eaque enim aliquid ea, iusto placeat eligendi possimus? Rerum optio distinctio cum reiciendis quae, in dicta perferendis ratione consectetur laborum non laboriosam explicabo ex porro veritatis debitis neque, eligendi, perspiciatis esse quaerat dolores tempore quidem voluptate id. Tenetur amet asperiores quidem similique.
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__intro">
+                            <span class="accordion__intro_title">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, asperiores.
+                            </span>
+                            <img class="accordion__intro_icon" src="assets/images/icons/accordion-down-2.svg" alt="">
+                            <img class="accordion__intro_icon_active" src="assets/images/icons/accordion-top-2.svg" alt="">
+                        </div>
+                        <div class="accordion__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur atque iure voluptatum cupiditate deleniti, optio odit sequi iusto, maiores neque consequatur fugiat minima suscipit culpa? Quis beatae amet laudantium, quaerat iusto animi sequi consequuntur ad, nam totam laborum repellendus rem obcaecati nulla. Ipsa quis, ducimus quia optio quasi doloremque id maxime repellat, consectetur vitae assumenda architecto facere eaque enim aliquid ea, iusto placeat eligendi possimus? Rerum optio distinctio cum reiciendis quae, in dicta perferendis ratione consectetur laborum non laboriosam explicabo ex porro veritatis debitis neque, eligendi, perspiciatis esse quaerat dolores tempore quidem voluptate id. Tenetur amet asperiores quidem similique.
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__intro">
+                            <span class="accordion__intro_title">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, asperiores.
+                            </span>
+                            <img class="accordion__intro_icon" src="assets/images/icons/accordion-down-2.svg" alt="">
+                            <img class="accordion__intro_icon_active" src="assets/images/icons/accordion-top-2.svg" alt="">
+                        </div>
+                        <div class="accordion__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur atque iure voluptatum cupiditate deleniti, optio odit sequi iusto, maiores neque consequatur fugiat minima suscipit culpa? Quis beatae amet laudantium, quaerat iusto animi sequi consequuntur ad, nam totam laborum repellendus rem obcaecati nulla. Ipsa quis, ducimus quia optio quasi doloremque id maxime repellat, consectetur vitae assumenda architecto facere eaque enim aliquid ea, iusto placeat eligendi possimus? Rerum optio distinctio cum reiciendis quae, in dicta perferendis ratione consectetur laborum non laboriosam explicabo ex porro veritatis debitis neque, eligendi, perspiciatis esse quaerat dolores tempore quidem voluptate id. Tenetur amet asperiores quidem similique.
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion__intro">
+                            <span class="accordion__intro_title">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, asperiores.
+                            </span>
+                            <img class="accordion__intro_icon" src="assets/images/icons/accordion-down-2.svg" alt="">
+                            <img class="accordion__intro_icon_active" src="assets/images/icons/accordion-top-2.svg" alt="">
+                        </div>
+                        <div class="accordion__content">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consectetur atque iure voluptatum cupiditate deleniti, optio odit sequi iusto, maiores neque consequatur fugiat minima suscipit culpa? Quis beatae amet laudantium, quaerat iusto animi sequi consequuntur ad, nam totam laborum repellendus rem obcaecati nulla. Ipsa quis, ducimus quia optio quasi doloremque id maxime repellat, consectetur vitae assumenda architecto facere eaque enim aliquid ea, iusto placeat eligendi possimus? Rerum optio distinctio cum reiciendis quae, in dicta perferendis ratione consectetur laborum non laboriosam explicabo ex porro veritatis debitis neque, eligendi, perspiciatis esse quaerat dolores tempore quidem voluptate id. Tenetur amet asperiores quidem similique.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cart-comments">
+        <div class="container">
+            <div class="cart-comments__block">
+                <div class="cart-heading">
+                    <div class="cart-heading__tabs">
+                        <button content-id="review" class="cart-tab-btn tab-btn-fourth">Отзывы (242)</button>
+                        <button content-id="comment" class="cart-tab-btn tab-btn-fourth _active">Комментарии (24)</button>
+                    </div>
+                    <div class="cart-heading__help">
+                        <div class="cart-heading__help_title">Остались вопросы?</div>
+                        <button class="btn-bordered">Поддержка</button>
+                    </div>
                 </div>
 
+                <div class="cart-comments__content"></div>
             </div>
         </div>
     </section>
