--- a/src/catalog.html
+++ b/src/catalog.html
@@ -144,57 +144,65 @@ title: Главная страница
     <section class="catalog-list">
         <div class="container">
             <div class="catalog__tabs">
-                <a class="catalog__tab" href="#">
+                <div class="catalog__tab catalog__tab_name">
                     <span class="catalog__tab_block">
                         <img class="catalog__tab_img" src="assets/images/home/icons/catalog.svg" alt="">
                         <span class="catalog__tab_title">Catalog</span>
                     </span>
-                </a>
-                <a class="catalog__tab" href="#">
-                    <span class="catalog__tab_block">
-                        <img class="catalog__tab_img" src="assets/images/home/icons/pc.svg" alt="">
-                        <span class="catalog__tab_title">PC</span>
-                    </span>
-                </a>
-                <a class="catalog__tab" href="#">
-                    <span class="catalog__tab_block">
-                        <img class="catalog__tab_img" src="assets/images/home/icons/playstation.svg" alt="">
-                        <span class="catalog__tab_title">PlayStation</span>
-                    </span>
-                </a>
-                <a class="catalog__tab active" href="#">
-                    <span class="catalog__tab_block">
-                        <img class="catalog__tab_img" src="assets/images/home/icons/xbox.svg" alt="">
-                        <span class="catalog__tab_title">Xbox</span>
-                    </span>
-                </a>
-                <a class="catalog__tab" href="#">
-                    <span class="catalog__tab_block">
-                        <img class="catalog__tab_img" src="assets/images/home/icons/nintendo.svg" alt="">
-                        <span class="catalog__tab_title">Nintendo</span>
-                    </span>
-                </a>
-                <a class="catalog__tab" href="#">
-                    <span class="catalog__tab_block">
-                        <img class="catalog__tab_img" src="assets/images/home/icons/giftcard.svg" alt="">
-                        <span class="catalog__tab_title">Gift Cards</span>
-                    </span>
-                </a>
-                <a class="catalog__tab" href="#">
-                    <span class="catalog__tab_block">
-                        <img class="catalog__tab_img" src="assets/images/home/icons/subs.svg" alt="">
-                        <span class="catalog__tab_title">Subscriptions</span>
-                    </span>
-                </a>
-                <a class="catalog__tab" href="#">
-                    <span class="catalog__tab_block">
-                        <img class="catalog__tab_img" src="assets/images/home/icons/gamepoints.svg" alt="">
-                        <span class="catalog__tab_title">Game Points</span>
-                    </span>
-                </a>
+                </div>
+                <button class="catalog__btn">
+                    <span class="catalog__btn_name">Xbox</span>
+                    <img class="catalog__btn_img" src="assets/images/icons/arrow-down.svg" alt="">
+                </button>
+                <div class="catalog__tabs_content">
+                    <a class="catalog__tab" href="#">
+                        <span class="catalog__tab_block">
+                            <img class="catalog__tab_img" src="assets/images/home/icons/pc.svg" alt="">
+                            <span class="catalog__tab_title">PC</span>
+                        </span>
+                    </a>
+                    <a class="catalog__tab" href="#">
+                        <span class="catalog__tab_block">
+                            <img class="catalog__tab_img" src="assets/images/home/icons/playstation.svg" alt="">
+                            <span class="catalog__tab_title">PlayStation</span>
+                        </span>
+                    </a>
+                    <a class="catalog__tab active" href="#">
+                        <span class="catalog__tab_block">
+                            <img class="catalog__tab_img" src="assets/images/home/icons/xbox.svg" alt="">
+                            <span class="catalog__tab_title">Xbox</span>
+                        </span>
+                    </a>
+                    <a class="catalog__tab" href="#">
+                        <span class="catalog__tab_block">
+                            <img class="catalog__tab_img" src="assets/images/home/icons/nintendo.svg" alt="">
+                            <span class="catalog__tab_title">Nintendo</span>
+                        </span>
+                    </a>
+                    <a class="catalog__tab" href="#">
+                        <span class="catalog__tab_block">
+                            <img class="catalog__tab_img" src="assets/images/home/icons/giftcard.svg" alt="">
+                            <span class="catalog__tab_title">Gift Cards</span>
+                        </span>
+                    </a>
+                    <a class="catalog__tab" href="#">
+                        <span class="catalog__tab_block">
+                            <img class="catalog__tab_img" src="assets/images/home/icons/subs.svg" alt="">
+                            <span class="catalog__tab_title">Subscriptions</span>
+                        </span>
+                    </a>
+                    <a class="catalog__tab" href="#">
+                        <span class="catalog__tab_block">
+                            <img class="catalog__tab_img" src="assets/images/home/icons/gamepoints.svg" alt="">
+                            <span class="catalog__tab_title">Game Points</span>
+                        </span>
+                    </a>
+                </div>
+                <div class="catalog__bg"></div>
             </div>
         </div>
     </section>
+    
 
     <section class="catalog-filter">
         <div class="container">
@@ -220,6 +228,7 @@ title: Главная страница
                         </label>
                     </div>
                     <div class="catalog-filter__info_select">
+                        <span class="catalog-filter__info_select_text">Сортировать:</span>
                         <div class="custom-select custom-select-unique">
                             <select>
                                 <option value="0">По популярности</option>
