--- a/src/index.html
+++ b/src/index.html
@@ -311,11 +311,20 @@ title: Главная страница
                                 </div>
                             </div>
                         </li>
+                        <li class="splide__slide">
+                            <div class="statics-card">
+                                <img src="assets/images/home/statics-1.png" class="statics-card__img">
+                                <div class="statics-card__content">
+                                    <div class="statics-card__number">789 462 ₽</div>
+                                    <div class="statics-card__text">Партнеры заработали</div>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
 
-           <!--  <div class="swiper">
+            <!--  <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="statics-card">
