--- a/src/cart.html
+++ b/src/cart.html
@@ -92,101 +92,99 @@ title: Главная страница
                         <a href="#" class="cart-item__img_buynow">Купить прямо сейчас</a>
                     </div>
                 </div>
-                <div class="cart-item__content">
-                    <div class="cart-item__prices">
-                        <button class="cart-item__prices_item _active">
-                            <div class="cart-item__prices_title">
-                                <span class="cart-item__prices_title_main">Standart</span>
-                                <span class="cart-item__prices_title_second">All locations</span>
-                            </div>
-                            <div class="cart-item__prices_number">
-                                <span>1258</span>
-                                <span class="cart-item__prices_number_cur">₽</span>
-                            </div>
-                        </button>
-                        <button class="cart-item__prices_item">
-                            <div class="cart-item__prices_title">
-                                <span class="cart-item__prices_title_main">Standart</span>
-                                <span class="cart-item__prices_title_second">All locations</span>
-                            </div>
-                            <div class="cart-item__prices_number">
-                                <span>1258</span>
-                                <span class="cart-item__prices_number_cur">₽</span>
-                            </div>
-                        </button>
-                        <button class="cart-item__prices_item">
-                            <div class="cart-item__prices_title">
-                                <span class="cart-item__prices_title_main">Standart</span>
-                                <span class="cart-item__prices_title_second">All locations</span>
-                            </div>
-                            <div class="cart-item__prices_number">
-                                <span>1258</span>
-                                <span class="cart-item__prices_number_cur">₽</span>
-                            </div>
-                        </button>
+                <div class="cart-item__prices">
+                    <button class="cart-item__prices_item _active">
+                        <div class="cart-item__prices_title">
+                            <span class="cart-item__prices_title_main">Standart</span>
+                            <span class="cart-item__prices_title_second">All locations</span>
+                        </div>
+                        <div class="cart-item__prices_number">
+                            <span>1258</span>
+                            <span class="cart-item__prices_number_cur">₽</span>
+                        </div>
+                    </button>
+                    <button class="cart-item__prices_item">
+                        <div class="cart-item__prices_title">
+                            <span class="cart-item__prices_title_main">Standart</span>
+                            <span class="cart-item__prices_title_second">All locations</span>
+                        </div>
+                        <div class="cart-item__prices_number">
+                            <span>1258</span>
+                            <span class="cart-item__prices_number_cur">₽</span>
+                        </div>
+                    </button>
+                    <button class="cart-item__prices_item">
+                        <div class="cart-item__prices_title">
+                            <span class="cart-item__prices_title_main">Standart</span>
+                            <span class="cart-item__prices_title_second">All locations</span>
+                        </div>
+                        <div class="cart-item__prices_number">
+                            <span>1258</span>
+                            <span class="cart-item__prices_number_cur">₽</span>
+                        </div>
+                    </button>
+                </div>
+                <div class="cart-item__breadcrumb">
+                    <ul class="cart-item__breadcrumb_items breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                        <li class="breadcrumb-item"><a href="#">Игры</a></li>
+                        <li class="breadcrumb-item"><a href="#">Xbox</a></li>
+                        <li class="breadcrumb-item active">Helldivers II</li>
+                    </ul>
+                    <a href="#" class="cart-item__return btn-arrow">Назад</a>
+                </div>
+                <div class="cart-item__desc">
+                    <div class="cart-item__desc_title">Описание игры</div>
+                    <div class="cart-item__desc_text">Helldivers 2 — это квинтэссенция всех кооперативных идей, что успели придумать в Arrowhead Game Studios со времён Magicka. Вместе с друзьями вам предстоит насильно распространять демократические ценности по всей галактике!</div>
+                </div>
+                <div class="cart-item__tabs">
+                    <div class="cart-item__tabs_title">Системные требования</div>
+                    <div class="cart-item__tabs_btns">
+                        <button content-id="minimum" class="cart-tab-btn tab-btn _active">Минимальныесистемные требования</button>
+                        <button content-id="normal" class="cart-tab-btn tab-btn">Рекомендуемые системные требования</button>
                     </div>
-                    <div class="cart-item__breadcrumb">
-                        <ul class="cart-item__breadcrumb_items breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                            <li class="breadcrumb-item"><a href="#">Игры</a></li>
-                            <li class="breadcrumb-item"><a href="#">Xbox</a></li>
-                            <li class="breadcrumb-item active">Helldivers II</li>
-                        </ul>
-                        <a href="#" class="cart-item__return btn-arrow">Назад</a>
-                    </div>
-                    <div class="cart-item__desc">
-                        <div class="cart-item__desc_title">Описание игры</div>
-                        <div class="cart-item__desc_text">Helldivers 2 — это квинтэссенция всех кооперативных идей, что успели придумать в Arrowhead Game Studios со времён Magicka. Вместе с друзьями вам предстоит насильно распространять демократические ценности по всей галактике!</div>
-                        <div class="cart-item__desc_tabs">
-                            <div class="cart-item__desc_title">Системные требования</div>
-                            <div class="cart-item__desc_tabs_btns">
-                                <button content-id="minimum" class="cart-tab-btn tab-btn _active">Минимальныесистемные требования</button>
-                                <button content-id="normal" class="cart-tab-btn tab-btn">Рекомендуемые системные требования</button>
-                            </div>
-                            <div class="cart-item__desc_tabs_content">
-                                <div class="cart-item__desc_tabs_item tab-content _active" id="minimum">
-                                    <div class="cart-table">
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">ОС</div>
-                                            <div class="cart-table__cell">Windows 10 (64-разрядная версия)</div>
-                                        </div>
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">Процессор</div>
-                                            <div class="cart-table__cell">Intel Core i7-4790K или AMD Ryzen 5 1500X</div>
-                                        </div>
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">Оперативная память</div>
-                                            <div class="cart-table__cell">8 ГБ ОЗУ</div>
-                                        </div>
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">Видеокарта</div>
-                                            <div class="cart-table__cell">NVIDIA GeForce GTX 1050Ti или AMD Radeon RX4</div>
-                                        </div>
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">Место на диске</div>
-                                            <div class="cart-table__cell">100 ГБ</div>
-                                        </div>
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">Дополнительно</div>
-                                            <div class="cart-table__cell">Требуются 64-разрядные процессор и операционная система</div>
-                                        </div>
-                                    </div>
+                    <div class="cart-item__tabs_content">
+                        <div class="cart-item__tabs_item tab-content _active" id="minimum">
+                            <div class="cart-table">
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">ОС</div>
+                                    <div class="cart-table__cell">Windows 10 (64-разрядная версия)</div>
                                 </div>
-                                <div class="cart-item__desc_tabs_item tab-content" id="normal">
-                                    <div class="cart-table">
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">ОС</div>
-                                            <div class="cart-table__cell">Windows 10 (64-разрядная версия)</div>
-                                        </div>
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">Процессор</div>
-                                            <div class="cart-table__cell">Intel Core i7-4790K или AMD Ryzen 5 1500X</div>
-                                        </div>
-                                        <div class="cart-table__row">
-                                            <div class="cart-table__cell">Оперативная память</div>
-                                            <div class="cart-table__cell">8 ГБ ОЗУ</div>
-                                        </div>
-                                    </div>
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">Процессор</div>
+                                    <div class="cart-table__cell">Intel Core i7-4790K или AMD Ryzen 5 1500X</div>
+                                </div>
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">Оперативная память</div>
+                                    <div class="cart-table__cell">8 ГБ ОЗУ</div>
+                                </div>
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">Видеокарта</div>
+                                    <div class="cart-table__cell">NVIDIA GeForce GTX 1050Ti или AMD Radeon RX4</div>
+                                </div>
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">Место на диске</div>
+                                    <div class="cart-table__cell">100 ГБ</div>
+                                </div>
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">Дополнительно</div>
+                                    <div class="cart-table__cell">Требуются 64-разрядные процессор и операционная система</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cart-item__tabs_item tab-content" id="normal">
+                            <div class="cart-table">
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">ОС</div>
+                                    <div class="cart-table__cell">Windows 10 (64-разрядная версия)</div>
+                                </div>
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">Процессор</div>
+                                    <div class="cart-table__cell">Intel Core i7-4790K или AMD Ryzen 5 1500X</div>
+                                </div>
+                                <div class="cart-table__row">
+                                    <div class="cart-table__cell">Оперативная память</div>
+                                    <div class="cart-table__cell">8 ГБ ОЗУ</div>
                                 </div>
                             </div>
                         </div>
