--- a/src/cart.html
+++ b/src/cart.html
@@ -366,56 +366,41 @@ title: Главная страница
                         <div id="trailer" class="cart-about__media_tab tab-content-second">
                             <iframe width="100%" height="340" src="https://www.youtube.com/embed/Lb2wwEx6DVw" title="Marvel 1943: Rise of Hydra | Story Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
-                        <div id="screenshot" class="cart-about__media_tab tab-content-second _active">
-                            <div class="screen-swiper">
-                                <div class="swiper">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
+                        <div id="screenshot" class="cart-about__media_tab tab-content-second _active screen-swiper">
+                            <div class="splide">
+                                <div class="splide__track">
+                                    <ul class="splide__list">
+                                        <li class="splide__slide">
                                             <div class="screen-swiper__slide">
                                                 <img src="assets/images/cart/1.png" alt="">
                                             </div>
-                                        </div>
-                                        <div class="swiper-slide">
+                                        </li>
+                                        <li class="splide__slide">
                                             <div class="screen-swiper__slide">
                                                 <img src="assets/images/cart/1.png" alt="">
                                             </div>
-                                        </div>
-                                        <div class="swiper-slide">
+                                        </li>
+                                        <li class="splide__slide">
                                             <div class="screen-swiper__slide">
                                                 <img src="assets/images/cart/1.png" alt="">
                                             </div>
-                                        </div>
-                                        <div class="swiper-slide">
+                                        </li>
+                                        <li class="splide__slide">
                                             <div class="screen-swiper__slide">
                                                 <img src="assets/images/cart/1.png" alt="">
                                             </div>
-                                        </div>
-                                        <div class="swiper-slide">
+                                        </li>
+                                        <li class="splide__slide">
                                             <div class="screen-swiper__slide">
                                                 <img src="assets/images/cart/1.png" alt="">
                                             </div>
-                                        </div>
-                                        <div class="swiper-slide">
+                                        </li>
+                                        <li class="splide__slide">
                                             <div class="screen-swiper__slide">
                                                 <img src="assets/images/cart/1.png" alt="">
                                             </div>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <div class="screen-swiper__slide">
-                                                <img src="assets/images/cart/1.png" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <div class="screen-swiper__slide">
-                                                <img src="assets/images/cart/1.png" alt="">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <div class="game-slider__arrows">
-                                    <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-58e4f81099956a43f"></div>
-                                    <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-58e4f81099956a43f"></div>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
