--- a/src/cart.html
+++ b/src/cart.html
@@ -368,6 +368,7 @@ title: Главная страница
                         </div>
                         <div id="screenshot" class="cart-about__media_tab tab-content-second _active screen-swiper">
                             <div class="splide">
+
                                 <div class="splide__track">
                                     <ul class="splide__list">
                                         <li class="splide__slide">
@@ -402,6 +403,12 @@ title: Главная страница
                                         </li>
                                     </ul>
                                 </div>
+
+                                <div class="splide__arrows game-slider__arrows">
+                                    <button class="splide__arrow--prev swiper-button-prev"></button>
+                                    <button class="splide__arrow--next swiper-button-next"></button>
+                                </div>
+
                             </div>
                         </div>
                         <div id="streaming" class="cart-about__media_tab tab-content-second">
