--- a/src/index.html
+++ b/src/index.html
@@ -665,7 +665,7 @@ title: Главная страница
                                 Время вышло!
                             </div>
                         </div>
-                        <a href="#" class="pre-order__btn">
+                        <a href="#" class="pre-order__btn btn-blur">
                             <span>Pre-Order</span>
                             <span>₽ 1258</span>
                         </a>
@@ -698,7 +698,7 @@ title: Главная страница
                         <div class="pre-order__card_text">Подпишись на нашу интересную рассылку и получай дополнительные скидки на весь ассортимент</div>
                         <form class="pre-order__subs" method="post">
                             <input class="pre-order__subs_input" type="email" placeholder="Введите свой email..." name="" id="">
-                            <button class="pre-order__subs_btn btn">Подписаться</button>
+                            <button class="pre-order__subs_btn btn-blur">Подписаться</button>
                         </form>
                     </div>
                 </div>
